--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "@mhiseg/esm-death-app",
-  "version": "3.0.0",
+  "version": "0.0.1",
   "license": "MPL-2.0",
   "description": "A microfrontend admin OpenMRS",
   "browser": "dist/mhiseg-esm-death-app.js",
+  "repo": "/openmrs/frontend/mhiseg-esm-styleguide-app",
   "main": "src/index.ts",
   "source": true,
   "scripts": {
     "start": "openmrs develop",
     "serve": "webpack serve --mode=development",
     "build": "webpack --mode production",
+    "copy": "copyfiles -e dist/*.txt -f dist/*.* $npm_package_repo-$npm_package_version/",
+    "deploy": "yarn build && yarn copy",
     "analyze": "webpack --mode=production --env.analyze=true",
     "lint": "eslint src --ext js,jsx,ts,tsx",
     "prettier": "prettier --write \"src/**/*.{ts,tsx}\"",
@@ -45,6 +48,7 @@
   "dependencies": {
     "@carbon/icons-react": "^10.18.0",
     "carbon-components-react": "^7.25.0",
+    "copyfiles": "^2.4.1",
     "lodash-es": "^4.17.15"
   },
   "peerDependencies": {
