--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@carbon/icons-react": "^10.18.0",
     "carbon-components-react": "^7.25.0",
     "copyfiles": "^2.4.1",
-    "lodash-es": "^4.17.15"
+    "lodash-es": "^4.17.15",
+    "@iconify/react": "^3.2.1"
   },
   "peerDependencies": {
     "@openmrs/esm-framework": "^3.14.0-pre",
@@ -58,7 +59,8 @@
     "react": "16.x",
     "react-i18next": "11.x",
     "react-router-dom": "5.x",
-    "rxjs": "6.x"
+    "rxjs": "6.x",
+    "@iconify/react": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
